[package]
name = "wedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
derivative = "2.2.0"
indexmap = { version = "1.9.1", features = ["serde"] }
nom = "7.1.1"
paste = "1.0.9"
serde = { version = "1.0.145", features = ["derive"] }
wedit-macros = { path = "wedit-macros" }
